service get byke added with handler, routes and documentation
