# cmd/api/router/routes.go
@@ -11,6 +11,7 @@ func Routers(router *gin.Engine, handlers ports.ApiHandler) {
 	bikesRouter := router.Group("/v1/bikes")
 
 	bikesRouter.GET("/search", handlers.GetAllBikesHandler)
+	bikesRouter.GET("/byke/:hash_byke", handlers.GetBykeHandler)
 
 	router.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 }
