# pkg/adapters/http/handlers.go
@@ -10,7 +10,6 @@ import (
 	"github.com/Bikes2Road/bikes-compass/pkg/core/ports"
 	errorBikes "github.com/Bikes2Road/bikes-compass/utils/error"
 	"github.com/gin-gonic/gin"
-	"github.com/go-playground/validator/v10"
 )
 
 type ApiHandler struct {
@@ -24,10 +23,6 @@ func NewApiHandler(application core.Application) ports.ApiHandler {
 		ctx:         context.Background(),
 	}
 }
-
-var validate = validator.New()
-
-// @BasePath /v1/bikes
 
 // Get All Bikes
 // @Summary Search Bikes
@@ -95,4 +90,45 @@ func (h *ApiHandler) GetAllBikesHandler(c *gin.Context) {
 	}
 
 	c.JSON(http.StatusOK, bikes)
+}
+
+// Get Byke
+// @Summary Search Byke by Hash
+// @Description This service extract all data from a Byke by Hash_Byke
+// @Tags Bikes 2 Road
+// @Param hash_byke path string true "Hash of Byke that you want extract"
+// @Produce json
+// @Success 200 {object} domain.GetBykeResponseSuccess
+// @Failure 400 {object} domain.ResponseHttpError
+// @Failure 404 {object} domain.ResponseHttpError
+// @Failure 401 {object} domain.ResponseHttpError
+// @Failure 500 {object} domain.ResponseHttpError
+// @Router /byke/{hash_byke} [get]
+func (h *ApiHandler) GetBykeHandler(c *gin.Context) {
+	var paramRequest domain.SearchBykeRequest
+
+	pathRequest := c.Request.RequestURI
+
+	if err := c.ShouldBindUri(&paramRequest); err != nil {
+		errResponse := errorBikes.MapErrorResponse(errorBikes.ErrorInvalidPathParams, err)
+		c.JSON(errResponse.Code, errResponse)
+		return
+	}
+
+	// INSERT_YOUR_CODE
+	// Validar que HashByke sea un string alfanumérico de exactamente 12 dígitos usando regex
+	matched, _ := regexp.MatchString(`^[A-Za-z0-9]{12}$`, paramRequest.HashByke)
+	if !matched {
+		errResponse := errorBikes.MapErrorResponse(errorBikes.ErrorInvalidPathParam, nil)
+		c.JSON(errResponse.Code, errResponse)
+		return
+	}
+
+	byke, errResp := h.application.GetByke.Execute(h.ctx, paramRequest, pathRequest)
+	if errResp != nil {
+		c.JSON(errResp.Code, errResp)
+		return
+	}
+
+	c.JSON(http.StatusOK, byke)
 }
